--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+* body {
+    margin: 0;
+    padding: 0;
+}
+
 header {
     font-size: small;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
