--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,19 @@
 }
 
 header {
+    display: flex;
+    justify-content: center;
     font-size: small;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-align: center;
-    background-color: rgb(45, 119, 119);
+    background: rgb(34, 193, 195);
+    background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
     margin: 0;
-    padding: 0;
+    padding: 1px 0 1px;
 }
 
 h1 {
     margin: 0;
-    padding: 0;
+    padding: 10px 0 8px;
 }
 
 hr {
@@ -23,36 +25,54 @@ hr {
 }
 
 main {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: small;
-    background-color: rgb(222, 222, 222);
+    background: rgb(34, 193, 195);
+    background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+}
+
+p {
+    margin: 0;
 }
 
 .header {
     text-align: center;
     margin: auto;
+    padding: 5px 0 8px;
 }
 
 .bio {
     text-align: center;
-    font-style: oblique;
+    font-style: italic;
 }
 
 .jobs {
     text-align: center;
     list-style-type: none;
+    font-style: italic;
     padding-top: 0;
 }
 
-.education {
-    text-align: center;
-    margin: 2px;
-    padding-bottom: 5px;
+ul {
+    margin: 0;
 }
 
-.goals {
+.education {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding-bottom: 5px 0 8px;
+    font-style: italic;
+}
+
+.goals,
+.places {
     text-align: center;
     list-style-type: none;
-    padding: 0;
+    padding: 5px 0 8px;
     margin: 0;
+    font-style: italic;
 }
