--- a/styles.css
+++ b/styles.css
@@ -1,78 +1,51 @@
 * body {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    background-color: #7eb6a9;
 }
 
 header {
-    display: flex;
-    justify-content: center;
-    font-size: small;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background: rgb(34, 193, 195);
-    background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
-    margin: 0;
-    padding: 1px 0 1px;
-}
-
-h1 {
-    margin: 0;
-    padding: 10px 0 8px;
-}
-
-hr {
-    margin: 3px;
-    padding: 0;
-}
-
-main {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: small;
-    background: rgb(34, 193, 195);
-    background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
-}
-
-p {
-    margin: 0;
-}
-
-.header {
-    text-align: center;
     margin: auto;
-    padding: 5px 0 8px;
+    text-align: center;
+    width: 400px;
+    border-bottom: 2px solid black;
+    text-shadow: 3px 1px rgb(192, 219, 255);
 }
 
-.bio {
+main {}
+
+.first {
+    margin: auto;
+    width: 400px;
+    text-align: left;
+}
+
+.subhead {
     text-align: center;
-    font-style: italic;
+    margin: 8px 0 10px;
+    text-shadow: 2px 2px 5px rgb(192, 219, 255);
+    ;
 }
 
 .jobs {
-    text-align: center;
     list-style-type: none;
-    font-style: italic;
-    padding-top: 0;
+    padding: 0;
+    margin: 0;
+    width: 600px;
 }
 
-ul {
+.goals {
+    list-style-type: none;
+    text-align: center;
+    display: inline;
+    padding: 0;
     margin: 0;
+    width: 600px;
 }
 
 .education {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding-bottom: 5px 0 8px;
-    font-style: italic;
-}
-
-.goals,
-.places {
     text-align: center;
-    list-style-type: none;
-    padding: 5px 0 8px;
-    margin: 0;
-    font-style: italic;
+    margin: 5px 0 5px;
 }
